<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.assign2.jagdeep21.OrderScreen" >

    <TextView
        android:id="@+id/txtHeading3"
        style="@style/text_view1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_screen" />

    <TextView
        android:id="@+id/textView1"
        style="@style/text_view3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHeading3"
        android:gravity="center_horizontal"
        android:text="@string/fill"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:hint="@string/etName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etEmail"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etAddress"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/etCity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etCity" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etPhone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/etCredit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etCredit"
                android:inputType="number" />

            <Button
                android:id="@+id/bOrder"
                style="@style/button_back"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/buttonback"
                android:onClick="order"
                android:text="@string/bConfirm" />

            <Button
                android:id="@+id/bBack"
                style="@style/button_back"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonback"
                android:onClick="back"
                android:text="@string/buttonBack" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>