<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.assign2.jagdeep21.JagdeepActivity" >

    <TextView
        android:id="@+id/txtHeading"
        style="@style/text_view1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/pizza_shop" />

    <Button
        android:id="@+id/butPress"
        style="@style/button_text"
        android:layout_below="@+id/txtHeading"
        android:layout_marginTop="80dp"
        android:background="@drawable/button"
        android:text="@string/button" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_below="@+id/butPress"
        style="@style/text_view2"
        android:layout_marginTop="10dp"
        android:text="@string/info" />

</RelativeLayout>